[package]
name = "document-ledger"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-http = { version = "0.6.1", features = ["trace"] }
axum = { version = "0.7.7", features = ["macros"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.40"
shellexpand = "3.1.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
